--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.3",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
