--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack serve --open --config ./config/webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack  --config ./config/webpack.dev.js"
+    "build": "webpack  --config ./config/webpack.common.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "file-loader": "^6.2.0",
+    "html-minimizer-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.3",
     "sass": "^1.32.2",
