--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "^6.2.0",
     "html-minimizer-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^4.5.1",
+    "image-minimizer-webpack-plugin": "^2.2.0",
     "mini-css-extract-plugin": "^1.3.3",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
