--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "clark-cui home",
   "private": true,
   "scripts": {
-    "dev": "webpack serve --open --config ./config/webpack.dev.js",
+    "dev": "webpack serve --open --config ./build/webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack  --config ./config/webpack.common.js"
+    "build": "webpack  --config ./build/webpack.build.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.12.3",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1"
