--- a/package.json
+++ b/package.json
@@ -28,15 +28,20 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/runtime": "^7.12.5",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
+    "eslint": "^7.18.0",
+    "eslint-config-alloy": "^3.10.0",
     "file-loader": "^6.2.0",
     "html-minimizer-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^4.5.1",
     "image-minimizer-webpack-plugin": "^2.2.0",
     "mini-css-extract-plugin": "^1.3.3",
+    "prettier": "^2.2.1",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
