--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "babel-loader": "^8.2.2",
+    "bootstrap-icons": "^1.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
@@ -41,6 +42,7 @@
     "html-webpack-plugin": "^4.5.1",
     "image-minimizer-webpack-plugin": "^2.2.0",
     "mini-css-extract-plugin": "^1.3.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
