--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "webpack serve --open --config ./build/webpack.dev.js",
-    "bird": "webpack serve --open --config ./build/webpack.bird.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "run-s eslint prettier",
+    "eslint": "eslint --ext .js,.jsx,.ts,.tsx,.vue, --ignore-pattern \"bad.*\" .",
+    "prettier": "prettier --write src/",
     "build": "webpack  --config ./build/webpack.build.js"
   },
   "repository": {
@@ -31,7 +32,6 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "babel-loader": "^8.2.2",
-    "bootstrap-icons": "^1.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
