--- a/package.json
+++ b/package.json
@@ -1,58 +1,15 @@
 {
-  "name": "homesite",
-  "sideEffects": false,
+  "name": "viteDoc",
   "version": "1.0.0",
-  "description": "clark-cui home",
-  "private": true,
-  "scripts": {
-    "dev": "webpack serve --open --config ./build/webpack.dev.js",
-    "lint": "run-s eslint prettier",
-    "eslint": "eslint --ext .js,.jsx,.ts,.tsx,.vue, --ignore-pattern \"bad.*\" .",
-    "prettier": "prettier --write src/",
-    "build": "webpack  --config ./build/webpack.build.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/clark-cui/homeSite.git"
-  },
-  "keywords": [
-    "typescript"
-  ],
-  "author": "clark-cui",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/clark-cui/homeSite/issues"
-  },
-  "homepage": "https://github.com/clark-cui/homeSite#readme",
+  "main": "index.js",
+  "author": "clark-cui <cuirongchuan@163.com>",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/runtime": "^7.12.5",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.2.0",
-    "eslint": "^7.18.0",
-    "eslint-config-alloy": "^3.10.0",
-    "file-loader": "^6.2.0",
-    "html-minimizer-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^4.5.1",
-    "image-minimizer-webpack-plugin": "^2.2.0",
-    "mini-css-extract-plugin": "^1.3.3",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.2",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.12.3",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1"
+    "vitepress": "^0.20.0"
   },
-  "dependencies": {}
+  "scripts": {
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "serve": "vitepress serve docs"
+  }
 }
