--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,5 @@ jobs:
           ftp-username: ${{ secrets.FTP_USERNAME }} # FTP用户名
           ftp-password: ${{ secrets.FTP_PASSWORD }} # FTP密码
           git-ftp-args: --insecure # （如果是FTP连接的话--insecure不用加）
-          local-dir: ./docs/.vitepress/dist # 选择哪些文件要部署到服务器，这个选项在这里选了之后，要在.git-ftp-include中添加相应的路径
+          local-dir: ./src/.vitepress/dist # 选择哪些文件要部署到服务器，这个选项在这里选了之后，要在.git-ftp-include中添加相应的路径
 
