--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "vitepress": "^0.20.0"
   },
   "scripts": {
-    "dev": "vitepress dev src",
-    "build": "vitepress build src",
-    "serve": "vitepress serve src"
+    "dev": "vitepress dev ",
+    "build": "vitepress build ",
+    "serve": "vitepress serve "
   }
 }
