--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dev": "vitepress dev ",
     "build": "vitepress build ",
     "serve": "vitepress serve "
+  },
+  "dependencies": {
+    "gitalk": "^1.7.2"
   }
 }
