--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "clark-cui <cuirongchuan@163.com>",
   "license": "MIT",
   "devDependencies": {
-    "fs-extra": "^10.0.0",
+    "fs-extra": "^11.1.0",
     "globby": "11.0.4",
     "gray-matter": "^4.0.3",
-    "lottie-web": "^5.7.14",
-    "vitepress": "^0.21.4"
+    "lottie-web": "^5.10.0",
+    "vitepress": "0.21.4"
   },
   "scripts": {
     "dev": "vitepress dev ",
@@ -17,7 +17,7 @@
     "serve": "vitepress serve "
   },
   "dependencies": {
-    "dayjs": "^1.10.7",
-    "gitalk": "^1.7.2"
+    "dayjs": "^1.11.7",
+    "gitalk": "^1.8.0"
   }
 }
