--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "globby": "11.0.4",
     "gray-matter": "^4.0.3",
     "lottie-web": "^5.10.0",
-    "vitepress": "0.21.4"
+    "vitepress": "1.0.0-alpha.32"
   },
   "scripts": {
     "dev": "vitepress dev ",
