--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.7",
-    "gitalk": "^1.8.0"
+    "gitalk": "^1.8.0",
+    "markdown-it-highlightjs": "^4.0.1"
   }
 }
