--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "dayjs": "^1.11.7",
-    "gitalk": "^1.8.0",
-    "markdown-it-highlightjs": "^4.0.1"
+    "gitalk": "^1.8.0"
   }
 }
