refector: remove flexsearch

--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
   "devDependencies": {
     "fast-glob": "^3.2.12",
     "feed": "^4.2.2",
-    "flexsearch": "^0.7.31",
     "fs-extra": "^11.1.0",
     "globby": "11.0.4",
     "gray-matter": "^4.0.3",
     "lottie-web": "^5.10.0",
     "markdown-it": "^13.0.1",
-    "vitepress": "1.0.0-alpha.45",
-    "vitepress-plugin-search": "1.0.4-alpha.19"
+    "vitepress": "1.0.0-alpha.45"
   },
   "scripts": {
     "dev": "vitepress dev ",
