--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
-name: CI/CD # 此工作流程（workflow）的名字
-on: push # 触发此文件运行的条件
+name: blog-catch-and-pages
+on:
   # 设置可以手动执行(参考：https://tongjunsz.gitee.io/2021/03/18/GitHub-Actions-%E6%89%8B%E5%8A%A8%E8%A7%A6%E5%8F%91%E6%96%B9%E5%BC%8F/)
   workflow_dispatch:
+  push:
+    branches:
+      - master
 jobs:
   FTP-Deploy-Action:
     name: CI&CD # 此任务（job）的名字
