--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "globby": "11.0.4",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
+    "markdown-it-mathjax3": "^4.3.2",
     "vitepress": "1.0.0-beta.5"
   },
   "scripts": {
