--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
     "markdown-it-mathjax3": "^4.3.2",
-    "vitepress": "1.0.0-beta.5"
+    "vitepress": "1.0.0-rc.4"
   },
   "scripts": {
     "dev": "vitepress dev ",
