--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "index.js",
   "author": "clark-cui <cuirongchuan@163.com>",
   "license": "MIT",
+  "type": "module",
   "devDependencies": {
-    "fast-glob": "^3.2.12",
+    "dayjs": "^1.11.10",
+    "fast-glob": "^3.3.2",
     "feed": "^4.2.2",
-    "fs-extra": "^11.1.0",
-    "globby": "11.0.4",
+    "fs-extra": "^11.2.0",
+    "globby": "14.0.0",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^13.0.1",
+    "markdown-it": "^14.0.0",
     "markdown-it-mathjax3": "^4.3.2",
-    "vitepress": "1.0.0-rc.14"
+    "vitepress": "1.0.0-rc.36",
+    "vitepress-plugin-twoslash": "^0.9.18"
   },
   "scripts": {
     "dev": "vitepress dev ",
@@ -20,7 +23,6 @@
     "serve": "vitepress serve "
   },
   "dependencies": {
-    "dayjs": "^1.11.7",
     "gitalk": "^1.8.0"
   }
 }
