--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "fs-extra": "^11.2.0",
     "globby": "14.0.0",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^14.0.0",
+    "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
-    "vitepress": "1.0.0-rc.40",
-    "vitepress-plugin-twoslash": "^0.10.0"
+    "vitepress": "1.0.1",
+    "vitepress-plugin-twoslash": "^0.10.2"
   },
   "scripts": {
     "dev": "vitepress dev ",
