--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
+    "@shikijs/vitepress-twoslash": "^1.6.1",
     "dayjs": "^1.11.10",
     "fast-glob": "^3.3.2",
     "feed": "^4.2.2",
@@ -14,8 +15,8 @@
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
-    "vitepress": "1.1.3",
-    "vitepress-plugin-twoslash": "^0.10.2"
+    "shiki": "^1.6.1",
+    "vitepress": "1.2.2"
   },
   "scripts": {
     "dev": "vitepress dev ",
